crates/rome_console/tests/markup/open_element_props.stderr
error: unexpected token
 --> tests/markup/open_element_props.rs:3:19
  |
3 |         <Emphasis property />
  |                   ^^^^^^^^
